--- a/templates/user.xml
+++ b/templates/user.xml
@@ -7,7 +7,7 @@
       <option name="PHP Statement" value="true" />
     </context>
   </template>
-  <template name="jscomment" value="/*&#10;  $COMMENT$&#10;*/&#10;$ENDS$" toReformat="true" toShortenFQNames="true">
+  <template name="jscomment" value="/*&#10;  $COMMENT$&#10;*/&#10;$ENDS$" description="" toReformat="true" toShortenFQNames="true">
     <variable name="COMMENT" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="ENDS" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
