--- a/templates/user.xml
+++ b/templates/user.xml
@@ -15,4 +15,13 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="reactcomponent" value="import React from 'react';&#10;&#10;const $COMPONENT_NAME$ = ($PROPS$) =&gt; {&#10;  $ENDS$&#10;}&#10;&#10;export default $COMPONENT_NAME$;" description="Creates a functional React component with a default export" toReformat="true" toShortenFQNames="true">
+    <variable name="COMPONENT_NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PROPS" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="ENDS" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="ES6_STATEMENT" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
