--- a/templates/Zen CSS.xml
+++ b/templates/Zen CSS.xml
@@ -45,4 +45,7 @@
     <variable name="OTHER_RULESETS" expression="" defaultValue="" alwaysStopAt="true" />
     <context />
   </template>
+  <template name="!" value="!important" description="!important" toReformat="true" toShortenFQNames="true">
+    <context />
+  </template>
 </templateSet>
